--- a/index.html
+++ b/index.html
@@ -219,11 +219,10 @@
 					<button class="nav-link filter" data-filter=".raspberrypi">Raspberry Pi</button>
 					<button class="nav-link filter" data-filter=".odroid">Odroid</button>
 					<button class="nav-link filter" data-filter=".pine">PINE64</button>
-					<button class="nav-link filter" data-filter=".radxa">ROCK Pi</button>
+					<button class="nav-link filter" data-filter=".radxa">Radxa</button>
 					<button class="nav-link filter" data-filter=".allo">Allo</button>
 					<button class="nav-link filter" data-filter=".asus">ASUS</button>
 					<button class="nav-link filter" data-filter=".nanopi">NanoPi</button>
-					<button class="nav-link filter" data-filter=".radxa">Radxa</button>
 					<button class="nav-link filter" data-filter=".x86_64">PC/VM</button>
 					<button class="nav-link filter" data-filter=".other">Other</button>
 				</nav>
@@ -1034,8 +1033,9 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_RadxaZero-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>Radxa Zero features a quad core 64 ARM processor, 32bit LPDDR4, up to 4K@60 HDMI, 802.11 ac WIFI, Bluetooth 5.0, USB 3.0, 40-pin GPIO header. Radxa Zero supports USB 2.0 OTG&power via one USB C port.<br>
-								Radxa Zero comes in 4 options with different ram/storage configuration.</p>
+							<p>Radxa Zero features a quad core 64 ARM processor, 32bit LPDDR4, up to 4K@60 HDMI, 802.11 ac WiFi, Bluetooth 5.0, USB 3.0, 40-pin GPIO header. Radxa Zero supports USB 2.0 OTG&power via one USB C port.<br>
+								Radxa Zero comes in 4 options with different RAM/storage configuration.</p>
+							<p><i style="color:grey;font-size:80%;">NB: No eMMC on 512 MiB and 1 GiB model, only 8 GiB eMMC for 2 GiB RAM model, larger eMMC only available for 4 GiB RAM model</i></p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/radxazero.jpg" alt="Radxa zero photo" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -1115,7 +1115,7 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#radxa">
 							<img src="images/sbc_images/radxazero.jpg" alt="Radxa Zero photo" width="8" height="5" loading="lazy">
 							<h3>Radxa Zero</h3>
-							<p>Amlogic S905Y2 1.8GHz | 4 cores | ARMv8</p>
+							<p>S905Y2 1.8GHz | 4 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix pine">
