--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -66,7 +66,7 @@
 				<div class="title">
 					<h1>DietPi-Software</h1>
 					<p>Easily install optional "ready to run" and optimized software for your device. As well as automating the Linux installation and configuration process for you, DietPi-Software also applies specific optimizations unique to your hardware model, ensuring you get the maximum performance from your device.</p>
-					<p><i>NB: Available software is dependent on the device and CPU architecture, some software titles may be unavailable. You can run the following command to list disabled items:</i> <code>dietpi-software list | grep disabled</code></p>
+					<p><i>NB: Available software is dependent on the device and CPU architecture, some software titles may be unavailable. You can run the following command to list disabled items:</i> <code>dietpi-software list | grep DISABLED</code></p>
 				</div>
 				<nav class="nav nav-pills" id="softwareinfo" style="display:none">
 					<button class="nav-link filter" data-filter="all">[All]</button>
