Replace crude wording with an extended sentence
Addresses: https://github.com/MichaIng/DietPi-Website/issues/182

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							</svg>
 							<h3>DietPi-Config</h3>
 						</a>
-						<p>Customise your devices hardware and software, your way. A tweakers wet dream!</p>
+						<p>Quickly and effortlessly customise your device's hardware and software settings for your needs, including network connection and localisation setup.</p>
 					</div>
 					<div class="col-md-4 col-sm-6 service">
 						<a href="https://dietpi.com/docs/dietpi_tools/#dietpi-backup-backuprestore" target="_blank" rel="noopener">
