Change "flash" to "write"
which fits better when talking about x86 systems instead of SD cards.

--- a/index.html
+++ b/index.html
@@ -735,12 +735,12 @@
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bullseye.7z"><span>Direct flash Image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Choose this to flash directly to the root drive of the target system.
+									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bullseye.7z"><span>Direct write Image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>Choose this to write directly to the internal/root drive of the target system.
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-BIOS-x86_64-Bullseye_Installer.7z"><span>Installer Image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Choose this to flash to e.g. a USB stick to boot and install DietPi to internal drive.
+									<br>Choose this to write to e.g. a USB stick to boot and install DietPi to an internal drive.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
@@ -776,7 +776,7 @@
 							<div class="project-info">
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_NativePC-UEFI-x86_64-Bullseye_Installer.7z"><span>Installer Image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Flash to e.g. a USB stick to boot and install DietPi to internal drive.
+									<br>Write to e.g. a USB stick to boot and install DietPi to an internal drive.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
