--- a/index.html
+++ b/index.html
@@ -458,6 +458,21 @@
 						<div class="col-md-6"><img src="images/sbc_images/hyperv.jpg" alt="Hyper-V logo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<div id="parallels" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Parallels</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>RAM:</span>1 GiB | Can be changed</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_Parallels-x86_64-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>The Parallels virtual machine is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/parallels.png" alt="Parallels logo" width="14" height="3" loading="lazy"></div>
+					</div>
+				</div>
 				<div id="slidingdiv14" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Odroid N2</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
@@ -1340,6 +1355,13 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv13">
 							<img src="images/sbc_images/hyperv.jpg" alt="Hyper-V logo" width="8" height="5" loading="lazy">
 							<h3>Hyper-V</h3>
+							<p>Virtual Machine x86_64</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#parallels">
+							<img src="images/sbc_images/parallels.png" alt="Parallels logo" width="14" height="3" loading="lazy">
+							<h3>Parallels</h3>
 							<p>Virtual Machine x86_64</p>
 						</a>
 					</div>
