--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.9 has been released</h2>
-					<h4>with best wishes for Christmas season</h4>
-					<p>Our last release with Debian Stretch support! We added password protection for the DietPi-Dashboard, DietPi-Backup has included support for multiple backups, the Apache web server uses the dedicated PHP-FPM server, and much more.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/#december-2021-version-79" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi v8.0 beta here</h2>
+					<h4>and a happy new year :)!</h4>
+					<p>Support for Debian Stretch has now been removed, which allowed us to improve and remove a lot of code and methods to keep up Stretch compatibility. Further improvements to myMPD, FuguHub and bug fixes for several software titles and platforms have been applied.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_0/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
