Switch to SVG Parallels logo

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 							</div>
 							<p>The Parallels virtual machine is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience.</p>
 						</div>
-						<div class="col-md-6"><img src="images/sbc_images/parallels.png" alt="Parallels logo" width="14" height="3" loading="lazy"></div>
+						<div class="col-md-6"><img src="images/sbc_images/parallels.svg" alt="Parallels logo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="slidingdiv14" class="toggleDiv single-project">
@@ -1360,7 +1360,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#parallels">
-							<img src="images/sbc_images/parallels.png" alt="Parallels logo" width="14" height="3" loading="lazy">
+							<img src="images/sbc_images/parallels.svg" alt="Parallels logo" width="8" height="5" loading="lazy">
 							<h3>Parallels</h3>
 							<p>Virtual Machine x86_64</p>
 						</a>
