--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.0 beta here</h2>
-					<h4>and a happy new year :)!</h4>
-					<p>Support for Debian Stretch has now been removed, which allowed us to improve and remove a lot of code and methods to keep up Stretch compatibility. Further improvements to myMPD, FuguHub and bug fixes for several software titles and platforms have been applied.</p>
+					<h2>DietPi v8.0 is here</h2>
+					<h4>and a Happy New Year :)</h4>
+					<p>Debian Stretch support was dropped, which allowed us to cleanup and improve much code and methods. Control multiple DietPi nodes from one DietPi-Dashboard frontend web interface. Log4Shell mitigation was applied to Airsonic and Blynk Server.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v8_0/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
