Update website banner for Beta v8.1

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.0 is here</h2>
-					<h4>and a Happy New Year :)</h4>
-					<p>Debian Stretch support was dropped, which allowed us to cleanup and improve much code and methods. Control multiple DietPi nodes from one DietPi-Dashboard frontend web interface. Log4Shell mitigation was applied to Airsonic and Blynk Server.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_0/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi Beta v8.1 is here</h2>
+					<h4>Please help testing the upcoming release</h4>
+					<p>A new Odroid N2(+) image with modern mainline kernel is available for testing. Enhancements to DietPi-Drive_Manager and DietPi-Backup have been done. Several bug fixes have been applied, and more.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5218" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
