--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v8.1 is here</h2>
 					<h4>Check out the changes of our new release</h4>
-					<p>The February 5th 2022 release of DietPi v8.1 comes together with a new image for Odroid N2, some improvements to our drive manager as well as set of enhancements and bug fixes for several software install options.</p>
+					<p>The February 5th 2022 release of DietPi v8.1 comes together with a new image for Odroid N2, some improvements to our drive manager and a number of enhancements and bug fixes for several software install options.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v8_1/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
