--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
-						<a href="#downloadinfo" class="thumbnail show_hide" rel="#parallels">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#utm">
 							<img src="images/sbc_images/utm.png" alt="UTM logo" width="8" height="5" loading="lazy">
 							<h3>UTM</h3>
 							<p>Virtual Machine x86_64</p>
