--- a/index.html
+++ b/index.html
@@ -488,6 +488,21 @@
 						<div class="col-md-6"><img src="images/sbc_images/utm.png" alt="UTM logo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<div id="proxmox" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Proxmox</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>ARCH:</span>x86_64</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_Proxmox-x86_64-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>The Proxmox virtual machine is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/proxmox.svg" alt="Proxmox logo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<div id="slidingdiv14" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Odroid N2(+)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
@@ -1363,6 +1378,13 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv16">
 							<img src="images/sbc_images/virtualbox.jpg" alt="VirtualBox logo" width="8" height="5" loading="lazy">
 							<h3>VirtualBox</h3>
+							<p>Virtual Machine x86_64</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#proxmox">
+							<img src="images/sbc_images/proxmox.svg" alt="Proxmox logo" width="8" height="5" loading="lazy">
+							<h3>Proxmox</h3>
 							<p>Virtual Machine x86_64</p>
 						</a>
 					</div>
