--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v8.2 beta is here</h2>
 					<h4>Please help testing the upcoming release</h4>
-					<p>New images for Proxmox, ESXi, UTM and Odroid C4 are generated from scratch via GitHub actions. We added the Kubernetes platform MicroK8s software option. User are informed of pending reboots after kernel upgrades, and more.</p>
+					<p>New images for Proxmox, ESXi, UTM and Odroid C4 are generated from scratch via GitHub actions. We added the Kubernetes platform MicroK8s software option. Users are informed of pending reboots after kernel upgrades, and more.</p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5319" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
