Add ESXi/vSphere appliance to download page

--- a/index.html
+++ b/index.html
@@ -522,13 +522,20 @@
 					</div>
 				</div>
 				<div id="slidingdiv15" class="toggleDiv single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>VMware</h3><span class="show_hide close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>VMware/ESXi</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
 								<div><span>RAM:</span>1 GiB | Can be changed</div>
 								<br>
-								<div><a href="https://dietpi.com/downloads/images/DietPi_VMware-x86_64-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_VMware-x86_64-Bullseye.7z"><span>VMX appliance:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>This appliance can be used with <b>VMware Workstation Player/Pro</b> and <b>Fusion</b>.
+								</div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_ESXi-x86_64-Bullseye.7z"><span>OVA appliance:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>This appliance can be used with <b>VMware vSphere</b> and <b>ESXi</b>.
+								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>The VMware virtual machine is great for those occasions where SBC performance just isn't enough. Run one of these on any x86_64 PC/server and still get the same great DietPi features and experience.</p>
@@ -1370,7 +1377,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv15">
 							<img src="images/sbc_images/vmware.jpg" alt="VMware logo" width="8" height="5" loading="lazy">
-							<h3>VMware</h3>
+							<h3>VMware/ESXi</h3>
 							<p>Virtual Machine x86_64</p>
 						</a>
 					</div>
