--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.2 beta is here</h2>
-					<h4>Please help testing the upcoming release</h4>
+					<h2>DietPi v8.2 is here</h2>
+					<h4>Check out the changes of our new release</h4>
 					<p>New images for Proxmox, ESXi, UTM and Odroid C4 are generated from scratch via GitHub actions. We added the Kubernetes platform MicroK8s software option. Users are informed of pending reboots after kernel upgrades, and more.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5319" target="_blank" rel="noopener">All info</a>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_2/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
