--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.3 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>We implemented initial support for container systems. PHP Composer became an own software option. motionEye is now available on Bullseye systems. Multiple NFS exports of the same server can be mounted, and more.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_3/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi Beta v8.4 is here</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>Find a new NanoPi 2 series image with updated kernel. We replaced the confusing dietpi-software "Preference" options with ondemand dependency choices. You can now disable APT list compression to speed up APT installs.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5452" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
