Migrate forum links from phpBB to Discourse

--- a/contribute.html
+++ b/contribute.html
@@ -133,8 +133,8 @@
 					<div class="row"><div class="col-md-12 project-title"><h3>Answer questions / Provide insights</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
-							<p>Start a discussion, ask and answer questions. There are many questions on <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi GitHub</a>, and also on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">Forum</a> for which you may have already the answers, or you could provide valuable insights.</p>
-							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">DietPi Forums</a> and find the ones that interest you the most.</p>
+							<p>Start a discussion, ask and answer questions. There are many questions on <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">the DietPi GitHub repository</a> and on our <a href="https://dietpi.com/forum/" target="_blank" rel="noopener">forum</a> for which you may have already the answers, or you could provide valuable insights.</p>
+							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on the <a href="https://dietpi.com/forum/" target="_blank" rel="noopener">DietPi community forum</a> and find the ones that interest you the most.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/question.jpg" alt="Question" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -222,7 +222,7 @@
 								<li>First time user, and you need help? No problem!</li>
 								<li>Do you have a question? Search for answers or create a new topic. One of the community members will help you</li>
 							</ul>
-							<p>Connect now to the <a href="https://dietpi.com/phpbb/">DietPi Forum</a>.</p>
+							<p>Connect now to our <a href="https://dietpi.com/forum/">community forum</a>.</p>
 						</div>
 						<div class="col-md-6"><img src="images/contribute/be-part-community.jpg" alt="Community" width="8" height="5" loading="lazy"></div>
 					</div>
