--- a/404.html
+++ b/404.html
@@ -77,11 +77,11 @@
 			</svg>
 			<h3>DietPi Docs</h3>
 		</a>
-		<a href="https://dietpi.com/phpbb/">
+		<a href="https://dietpi.com/forum/">
 			<svg viewBox="0 0 28 28" aria-hidden="true">
 				<path d="M17.75 18a1.75 1.75 0 0 1 1.75 1.75v2.002l-.008.108c-.311 2.126-2.221 3.149-5.425 3.149-3.193 0-5.133-1.011-5.552-3.112L8.5 21.75v-2A1.75 1.75 0 0 1 10.25 18h7.5zm.494-6h6.006A1.75 1.75 0 0 1 26 13.75v2.002l-.008.108c-.311 2.126-2.221 3.149-5.425 3.149l-.168-.002c-.309-1.103-1.288-1.926-2.47-2.002L17.75 17l-.922.001A4.49 4.49 0 0 0 18.5 13.5c0-.526-.09-1.031-.256-1.5zM3.75 12h6.006c-.166.469-.256.974-.256 1.5a4.49 4.49 0 0 0 1.496 3.351l.176.15L10.25 17a2.75 2.75 0 0 0-2.649 2.009h-.034c-3.193 0-5.133-1.011-5.552-3.112L2 15.75v-2A1.75 1.75 0 0 1 3.75 12zM14 10a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm6.5-6a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm-13 0a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7z"/>
 			</svg>
-			<h3>DietPi Forums</h3>
+			<h3>DietPi Forum</h3>
 		</a>
 		<a href="https://github.com/MichaIng/DietPi">
 			<svg viewBox="0 0 16 16" style="background-color: #fff;" aria-hidden="true">
