--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 								</div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye_AlloGUI.7z"><span>Allo GUI ARMv7 image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>This image has our <a href="https://dietpi.com/phpbb/viewtopic.php?t=2317" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
+									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
 								</div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
@@ -607,7 +607,7 @@
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_SparkySBC-ARMv7-Bullseye_AlloGUI.7z"><span>DL Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>This image has our <a href="https://dietpi.com/phpbb/viewtopic.php?t=2317" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
+									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
 								</div>
 							</div>
 							<p>The Allo Sparky SBC is unique, in the way its been designed for Audiophile usage at its core. By attaching a Kali Reclocker, Allo Piano DAC and Volt+, this system becomes the ultimate in high end audio quality and playback. If you love your audio and want the very best in audio quality, Sparky SBC coupled with the available audio HATs, is the complete Audiophile SBC solution.</p>
@@ -1447,11 +1447,11 @@
 						<p>Step by step guides to help kickstart your DietPi experience</p>
 					</div>
 					<div class="col-sm-6 col-md-3 service">
-						<a href="https://dietpi.com/phpbb/" target="_blank" rel="noopener">
+						<a href="https://dietpi.com/forum/" target="_blank" rel="noopener">
 							<svg viewBox="0 0 28 28" aria-hidden="true">
 								<path d="M17.75 18a1.75 1.75 0 0 1 1.75 1.75v2.002l-.008.108c-.311 2.126-2.221 3.149-5.425 3.149-3.193 0-5.133-1.011-5.552-3.112L8.5 21.75v-2A1.75 1.75 0 0 1 10.25 18h7.5zm.494-6h6.006A1.75 1.75 0 0 1 26 13.75v2.002l-.008.108c-.311 2.126-2.221 3.149-5.425 3.149l-.168-.002c-.309-1.103-1.288-1.926-2.47-2.002L17.75 17l-.922.001A4.49 4.49 0 0 0 18.5 13.5c0-.526-.09-1.031-.256-1.5zM3.75 12h6.006c-.166.469-.256.974-.256 1.5a4.49 4.49 0 0 0 1.496 3.351l.176.15L10.25 17a2.75 2.75 0 0 0-2.649 2.009h-.034c-3.193 0-5.133-1.011-5.552-3.112L2 15.75v-2A1.75 1.75 0 0 1 3.75 12zM14 10a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm6.5-6a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7zm-13 0a3.5 3.5 0 1 1 0 7 3.5 3.5 0 1 1 0-7z"/>
 							</svg>
-							<h3>Forums</h3>
+							<h3>Forum</h3>
 						</a>
 						<p>Join our growing community and share your DietPi experience</p>
 					</div>
