Update slider sub header

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
 					<h2>DietPi Beta v8.5 is here</h2>
-					<h4>Check out all changes</h4>
+					<h4>Help testing our next release</h4>
 					<p><a href="https://github.com/Prowlarr/Prowlarr" target="_blank" rel="noopener">Prowlarr indexer manager</a> added as software option. <a href="https://github.com/midwan/amiberry" target="_blank" rel="noopener">Amiberry by @midwan</a> updated to latest version. Security: WiFi key input + storage as 64-digit hexadecimal key, and SSH pubkey support and password login control via <code>dietpi.txt</code></p>
 					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5511" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
