--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.5 has been released</h2>
+					<h2>DietPi v8.6 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p><a href="https://github.com/Prowlarr/Prowlarr" target="_blank" rel="noopener">Prowlarr indexer manager</a> added as software option. <a href="https://github.com/midwan/amiberry" target="_blank" rel="noopener">Amiberry by @midwan</a> updated to latest version. Security: WiFi key input + storage as 64-digit hexadecimal key, and SSH pubkey support and password login control via <code>dietpi.txt</code></p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_5/" target="_blank" rel="noopener">Release notes</a>
+					<p>We added support and images for all PINE64 Quartz64 models. Thanks to community contributions, Tailscale, ZeroTier, Rclone and Prometheus Node Exporter were added to our software catalogue.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_6/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
