Add DietPi beta v8.7 slide

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.6 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>We added support and images for all PINE64 Quartz64 models. Thanks to community contributions, Tailscale, ZeroTier, Rclone and Prometheus Node Exporter were added to our software catalogue.</p>
+					<h2>DietPi beta v8.7 is here</h2>
+					<h4>Help testing our upcoming release</h4>
+					<p>We added support for FriendlyELEC's new NanoPi R5S, as well as the ebook server Readarr and the Subsonic-compatible media server Navidrome. vaultwarden is now installed much faster as DEB package.</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v8_6/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
