--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<h2>DietPi beta v8.7 is here</h2>
 					<h4>Help testing our upcoming release</h4>
 					<p>We added support for FriendlyELEC's new NanoPi R5S, as well as the ebook server Readarr and the Subsonic-compatible media server Navidrome. vaultwarden is now installed much faster as DEB package.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_6/" target="_blank" rel="noopener">Release notes</a>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5643" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
@@ -905,7 +905,7 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPCT4-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>FriendlyARM's next generation SBC is finally here! One of the fastest ARM SBC (RK3399) on the market today, with 2x1.8 GHz A72 cores and 4x1.4 GHz A53 cores. Onboard M.2/PCIe x4 with excellent throughput compliments a NAS/Server setup. Bottom line, we love it!</p>
+							<p>FriendlyELEC's next generation SBC is finally here! One of the fastest ARM SBC (RK3399) on the market today, with 2x1.8 GHz A72 cores and 4x1.4 GHz A53 cores. Onboard M.2/PCIe x4 with excellent throughput compliments a NAS/Server setup. Bottom line, we love it!</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/nanopct4.jpg" alt="NanoPC T4 photo" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -1066,7 +1066,7 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR4S-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>FriendlyARM's RK3399 dual-Ethernet/router board. When using the optionally shipped metal case, the CPU temperature stays in moderate range without a fan, as long as you do not run long-term full-load processes. It is purely headless but has a serial/UART debug port, so if you use it for important services, we recommend to have a serial terminal or adapter cable available, to allow console access even in case of boot issues of failing network (no SSH).</p>
+							<p>FriendlyELEC's RK3399 dual-Ethernet/router board. When using the optionally shipped metal case, the CPU temperature stays in moderate range without a fan, as long as you do not run long-term full-load processes. It is purely headless but has a serial/UART debug port, so if you use it for important services, we recommend to have a serial terminal or adapter cable available, to allow console access even in case of boot issues of failing network (no SSH).</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/nanopir4s.jpg" alt="NanoPi R4S photo" width="8" height="5" loading="lazy"></div>
 					</div>
