Little HTML syntax fix
and open software page in same browser tab

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<h2>DietPi v8.7 has been released</h2>
 							<h4>Check out all changes</h4>
 							<p class="text-black">We added support for FriendlyELEC's new NanoPi R5S, as well as the ebook server Readarr and the Subsonic-compatible media server Navidrome. vaultwarden is now installed much faster as DEB package.</p>
-							<a class="button" href="https://dietpi.com/docs/releases/v8_7/" target="_blank" rel="noopener">All info</a>
+							<a class="button" href="https://dietpi.com/docs/releases/v8_7/" target="_blank" rel="noopener">Release notes</a>
 						</div>
 						<div class="col text-center">
 							<img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy">
