HTML syntax fix and skip bootstrap CSS check
since it contains valid empty variables where CSS validator currently throws an error with.

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 				</div>
 			</div>
 			<!-- Slider navigation arrows -->
-			<button aria-label="Previous" class="glider-prev"><</button>
-			<button aria-label="Next" class="glider-next">></button>
+			<button aria-label="Previous" class="glider-prev"></button>
+			<button aria-label="Next" class="glider-next"></button>
 			<div role="tablist" class="dots"></div>
 		</div>
 		<!-- End home section -->
