Update release slider

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.7 has been released</h2>
+					<h2>DietPi v8.8 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>We added support for FriendlyELEC's new NanoPi R5S, as well as the ebook server Readarr and the Subsonic-compatible media server Navidrome. vaultwarden is now installed much faster as DEB package.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_7/" target="_blank" rel="noopener">Release notes</a>
+					<p>A smaller release with mainly some enhancements to our DietPi-Installer and DietPi-Imager scripts.</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_8/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
