Add DietPi Beta v8.9 slide

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.8 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>A smaller release with mainly some enhancements to our DietPi-Installer and DietPi-Imager scripts.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_8/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi Beta v8.9 is here</h2>
+					<h4>Please help testing our next release</h4>
+					<p>The Raspberry Pi <code>raspberrypi-sys-mods</code> package got replaced, skipping parts which have no point on DietPi. New Go installs do not set <code>GOPATH</code> anymore. HAProxy, phpBB and NoMachine were bumped to latest versions.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5753" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
